--- a/app/shared/components/Logo/_styles.styl
+++ b/app/shared/components/Logo/_styles.styl
@@ -1,2 +1,13 @@
+.logo
+  margin-top 50px
+  text-align center
+  background-color #313131
+  padding 10px
+  a
+    color #fff
+    text-decoration none
+    &:hover
+      opacity .8
+
 .monospace
   font-family monospace
