--- a/app/shared/containers/Pages/Track/_styles.styl
+++ b/app/shared/containers/Pages/Track/_styles.styl
@@ -5,11 +5,9 @@
   color #999
   
 .track
-  a
-    padding 10px 0
-    text-decoration none
-    color #999
-    &:hover
-      color #2e455d
   h4
     margin 3px 0  
+
+.audio
+  width 100%
+  margin-top 30px
